@@ -4,5 +4,12 @@ Products.MeetingBEP Changelog
 4.1 (unreleased)
 ----------------
 
-- Initial import
-
+- Restricted power observers have... restricted access to some informations of
+  the item, no access to :
+  - history (of every content, item, meeting, advice);
+  - item observations.
+- Items are not privacyViewable by restricted power observers when :
+  - using HR confidential proposing group;
+  - item is returned to proposing group for corrections.
+- When an item is accepted_out_of_meeting_emergency, the decision of duplicated
+  item is automatically adapted to manage "ratification".
